--- a/src/components/Pages/Van/Vans.css
+++ b/src/components/Pages/Van/Vans.css
@@ -20,14 +20,15 @@
 }
 
 .van__btn-btn {
+  display: flex;
   border-radius: 5px;
   background: #ffead0;
-  display: flex;
+  cursor: pointer;
+  align-items: center;
 }
 
 .van__btn-btn-span {
   padding: 6px 26px 7px 26px;
-  align-items: center;
   font-size: 16px;
   font-weight: 500;
   font-style: normal;
